<resources>
    <string name="app_name">My TvShow</string>
    <string name="title_home">Drama List</string>
    <string name="title_detail">Detail</string>
    <string name="button_back">Back</string>
    <string name="watch_here">TMDB</string>
    <string name="detail_image">Poster drama</string>
    <string name="add_to_favorite">Favorite</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="rating_label">Rating: %1$.1f</string>
    <string name="go_to_favorites">Favorites</string>
    <string name="favorite_title">Favorite TV Shows</string>
    <string name="home_title">My TvShow</string>
</resources>